--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@types/material-ui": "^0.21.12",
     "@types/prop-types": "^15.7.5",
     "@types/react-router-dom": "5.3.1",
+    "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.5",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "5.3.4"
   },
   "devDependencies": {
