--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/material-ui": "^0.21.12",
     "@types/prop-types": "^15.7.5",
     "@types/react-router-dom": "5.3.1",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "5.3.4"
   },
   "devDependencies": {
